@@ -1,9 +1,8 @@
 package com.hms.hospital;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Base64;
 
@@ -37,7 +36,8 @@ public class TestDoctorDashboard {
 
     private static int getStatusCode(String urlString, String authHeader) {
         try {
-            URL url = new URL(urlString);
+            URI uri = URI.create(urlString);
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             connection.setRequestProperty("Authorization", "Basic " + authHeader);
